# missionoutdeuce

./: .gitignore  CONTEXT.md  README.md  agents.md  render.yaml
backend/: .coverage  .env  .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  render.yaml  run.py
backend/.claude/: settings.local.json
backend/app/: main.py  realtime.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  devices.py  events.py  health.py  incidents.py  team_management.py  users.py
backend/app/core/: config.py  ids.py  security.py
backend/app/db/: bootstrap.py  rls.py  session.py
backend/app/models/: __init__.py  event.py  incident.py  incident_event.py  push_delivery.py  team_management.py
backend/app/schemas/: auth.py  event.py  incident.py  meta.py  team_management.py
backend/app/services/: formatters.py  incidents.py  push.py
backend/scripts/: check_openapi.py  export_openapi.py  mint_test_token.py
backend/tests/: AGENTS.md  CLAUDE.md  conftest.py
backend/tests/.claude/: settings.local.json
backend/tests/api/: test_auth.py  test_auth_sessions.py  test_devices.py  test_events.py  test_health.py  test_incidents.py  test_team_management.py  test_users.py  test_users_me.py
backend/tests/contract/: test_openapi_drift.py  test_response_shapes.py
backend/tests/integration/: test_incident_event_audit.py  test_incident_lifecycle.py  test_seed.py  test_sse_stream.py  test_team_membership_flows.py  test_team_membership_role_backfill.py
backend/tests/unit/: test_config.py  test_deps.py  test_events_stream.py  test_security.py
(+279 files in other folders)
